tests/ui/legacy_aes_not_safe_aead.rs
use crypt_guard::{Encryptor, MlKem768};
use crypt_guard::markers::AES;

fn main() {
    let _ = Encryptor::<MlKem768, AES>::new();
}
